BUGFIX: Limit headline width and decrease h1 size on mobile

--- a/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Organisms/_KeyVisual.scss
+++ b/DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Organisms/_KeyVisual.scss
@@ -58,7 +58,12 @@
   }
 
   h1, .h1 {
-    font-size: 60px;
+    font-size: 40px;
+    max-width: 90vw;
+
+    @include mq('medium') {
+      font-size: 60px;
+    }
   }
 
   h1, h2, h3,
@@ -66,6 +71,7 @@
   .h1, .h2, .h3,
   .h4, .h5, .h6 {
     font-weight: 400;
+    line-height: 1.2;
   }
 
   .keyVisual--large & {
